# mozzie-reveal

./: .dockerignore  Cargo.toml  Dockerfile  game_config.json
frontend/: ARCHITECTURE.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx  App.tsx  index.css
frontend/src/actions/: gameActions.ts
frontend/src/components/: AdminPanel.jsx  AdminPanel.tsx  BreedPieChart.tsx  GameOver.tsx  Header.tsx  JoinScreen.tsx  Leaderboard.tsx  Notification.tsx  RoundResults.tsx  Slideshow.jsx  Slideshow.tsx
frontend/src/components/admin/: AdminLobby.tsx  AdminResults.tsx  AdminRoundControl.tsx  AdminView.tsx
frontend/src/components/player/: PlayerRound.tsx  PlayerView.tsx
frontend/src/components/rounds/: BreedPercentageRound.tsx  MultiSelectRound.tsx  MultipleChoiceRound.tsx  NumericGuessRound.tsx
frontend/src/hooks/: useGameSelectors.ts  useHashRoute.ts  useSwipe.ts
frontend/src/services/: websocket.ts
frontend/src/store/: gameStore.ts
frontend/src/types/: game.ts
src/: main.rs
src/game/: mod.rs  state.rs
src/handlers/: connection.rs  mod.rs
src/types/: config.rs  messages.rs  mod.rs  player.rs
